# Saku

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
saku/: __main__.py  app.py
saku/core/: config.py  encoding.py  utils.py
saku/db/: connector.py  models.py
saku/index/: indexer.py  parser.py  query.py
saku_cli/: __main__.py  api.py  utils.py
tests/core/: test_encoding.py
